Validate PATCH route with openAPI specs
